<resources>
    <string name="app_name">EventScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Event Name</string>
    <string name="time_scheduler">Time Scheduler</string>
    <string name="todo">TODO</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="alarm">Alarm</string>
    <string name="note">Note</string>
    <string name="sample_date">00&#8211;00&#8211;0000 00:00</string>
    <string name="delete_all_events">Delete all events</string>

</resources>
