<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sample_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/eventReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventDate"
            android:layout_alignStart="@+id/eventDate"
            android:layout_alignParentEnd="true"
            android:text="@string/event_reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_toStartOf="@+id/eventDate"
            android:layout_alignParentStart="true"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/eventNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventReminder"
            android:text="@string/note"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>