<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100">

            <ImageView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="80"
                android:gravity="center"
                android:text="@string/time_scheduler"
                android:textSize="20sp"
                android:textStyle="bold"/>


            <ImageView
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="10"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_accept" />


        </LinearLayout>


    </android.support.v7.widget.Toolbar>



    <android.support.v7.widget.CardView
        android:layout_below="@id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/event_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:targetApi="o" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/rlFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/from"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_toStartOf="@+id/fromDate"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/fromDate"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/date"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/rlTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_toStartOf="@+id/toDate"
                    android:layout_alignParentStart="true"
                    android:text="@string/to"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textSize="15sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/brown"/>

            <RelativeLayout
                android:id="@+id/rlSetAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/alarmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/alarm"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/spinAlarmTimes"
                    android:layout_toEndOf="@+id/alarmTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:background="@android:color/transparent">
                </Spinner>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/brown"/>

            <EditText
                android:id="@+id/eventNote"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"
                tools:targetApi="o" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/brown"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>